Bug 1285248. Part 1 - the value of aSeekJob.mTarget.IsVideoOnly() is wrong because the members are reset in the move constructor. r=gerald

mDoneAudioSeeking should be true for video-only seek.
Otherwise we might request audio while a pending request is already in progress
and hit the assertion.

MozReview-Commit-ID: IeVjoEChLAR